# osm-detective

./: .env.sample  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  conf.toml.sample  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  testing.yml
.travis/: docker_build
assets/borders/: afghanistan.geojson  austria.geojson  belgium.geojson  germany.geojson  ir-sim.geojson  iran.geojson  liechtenstein.geojson  luxembourg.geojson  switzerland.geojson
assets/bot_commands/: de.md  en.md  fa.md  is_sus.md
setups/prometheus/: config.toml  docker-compose.yml
setups/prometheus/grafana/: grafana.ini
setups/prometheus/grafana/provisioning/dashboards/: OSM-detective.json  dashboard.yml
setups/prometheus/grafana/provisioning/datasources/: datasource.yml
setups/prometheus/prometheus/: prometheus.yml
setups/pyrogram/: config.toml  docker-compose.yml
src/: analyse.py  changeset.py  chart.py  conf.py  consts.py  main.py  parse.py  prometheus.py  tg-bot.py  tg_bot.py
src/texts/: flags.py  text_bot.py  text_changesets.py
src/texts/bot_commands/: is_sus.md  new_ch.md  not_sus.md  sus_found.md
tests/: test_osm_detective.py
