[tool.poetry]
name = "osm_detective"
version = "0.1.0"
description = ""
authors = ["Ebrahim <dearrude@tfwno.gf>"]

[tool.poetry.dependencies]
python = "^3.8"
osmapi = "^1.2.2"
matplotlib = "^3.3.1"
pathlib = "^1.0.1"
osmcha = "^0.7.0"
pyrogram = "^1.0.7"
khayyam = "^3.0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
