[tool.poetry]
name = "osm-detective"
version = "0.1.0"
description = "A simply project to monitor edits in OSM"
authors = ["Ebrahim <dearrude@tfwno.gf>"]

[tool.poetry.dependencies]
python = "^3.8"
osmapi = "^1.2.2"
matplotlib = "^3.3.1"
pathlib = "^1.0.1"
osmcha = "^0.7.0"
pyrogram = "^1.0.7"
khayyam = "^3.0.17"
tgcrypto = "^1.2.1"
apscheduler = "^3.6.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
